Restructure ExtRef info (signal, binding, source)
Signed-off-by: SYLLA MOHAMED <mohamed.sylla@rte-france.com>

--- a/sct-coverage/pom.xml
+++ b/sct-coverage/pom.xml
@@ -11,6 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <packaging>pom</packaging>
     <artifactId>sct-coverage</artifactId>
     <name>SCT-Coverage</name>
 
