--- a/sct-data/pom.xml
+++ b/sct-data/pom.xml
@@ -17,4 +17,8 @@
     <artifactId>sct-data</artifactId>
     <name>SCT DATA</name>
 
+    <properties>
+        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
+
 </project>
