--- a/sct-service/pom.xml
+++ b/sct-service/pom.xml
@@ -15,6 +15,9 @@
 
     <artifactId>sct-service</artifactId>
     <name>SCT SERVICE</name>
+    <properties>
+        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
 
     <dependencies>
         <dependency>
