--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <compas.core.version>1.0-SNAPSHOT</compas.core.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <sonar.coverage.exclusions>sct-coverage/**</sonar.coverage.exclusions>
+        <aggregate.report.dir>../sct-coverage/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
+        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
         <dependency>
