--- a/sct-data-postgres/pom.xml
+++ b/sct-data-postgres/pom.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- SPDX-FileCopyrightText: 2020 RTE FRANCE -->
-<!-- -->
-<!-- SPDX-License-Identifier: Apache-2.0 -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -14,11 +10,12 @@
         <version>local-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sct-data</artifactId>
-    <name>SCT DATA</name>
+    <name>SCT DATA POSTGRES</name>
+    <artifactId>sct-data-postgres</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
-
+    
 </project>
