--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <name>COMPAS-SCT</name>
 
     <properties>
-        <compas.core.version>local-SNAPSHOT</compas.core.version>
+        <compas.core.version>0.2.1</compas.core.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <sonar.coverage.exclusions>sct-coverage/**</sonar.coverage.exclusions>
