--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
     <packaging>pom</packaging>
     <name>COMPAS-SCT</name>
 
+    <repositories>
+        <repository>
+            <id>github-packages-compas</id>
+            <name>Github Packages CoMPAS</name>
+            <url>https://maven.pkg.github.com/com-pas/*</url>
+        </repository>
+    </repositories>
+
     <properties>
         <compas.core.version>0.2.1</compas.core.version>
         <maven.compiler.target>11</maven.compiler.target>
@@ -20,6 +28,7 @@
         <aggregate.report.dir>../sct-coverage/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.lfenergy.compas.core</groupId>
