--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -30,8 +30,18 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Create custom Maven Settings.xml
+        uses: whelk-io/maven-settings-xml-action@v18
+        with:
+          output_file: custom_maven_settings.xml
+          servers: '[{ "id": "github-packages-compas", "username": "OWNER", "password": "${{ secrets.GITHUB_TOKEN }}" }]'
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=com-pas_compas-sct -Dsonar.organization=com-pas -Dsonar.host.url=https://sonarcloud.io
+        run: |
+          ./mvnw -B -s custom_maven_settings.xml \
+            -Dsonar.projectKey=com-pas_compas-sct \
+            -Dsonar.organization=com-pas \
+            -Dsonar.host.url=https://sonarcloud.io \
+            verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
