--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -40,7 +40,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          ./mvnw -B -s custom_maven_settings.xml \
+          mvn -B -s custom_maven_settings.xml \
             -Dsonar.projectKey=com-pas_compas-sct \
             -Dsonar.organization=com-pas \
             -Dsonar.host.url=https://sonarcloud.io \
