--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
     </repositories>
 
     <properties>
-        <compas.core.version>0.2.1</compas.core.version>
+        <compas.core.version>local-SNAPSHOT</compas.core.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.coverage.exclusions>sct-coverage/**</sonar.coverage.exclusions>
         <aggregate.report.dir>../sct-coverage/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
@@ -38,7 +39,8 @@
     </dependencies>
     <modules>
         <module>sct-data</module>
-        <module>sct-data-postgres</module>
+        <module>sct-data-pg</module>
+        <module>sct-commons</module>
         <module>sct-service</module>
         <module>sct-coverage</module>
     </modules>
