adjust jacoco aggregate module ...
Signed-off-by: Mohamed Sylla <mohamed.sylla@rte-france.com>

--- a/sct-coverage/pom.xml
+++ b/sct-coverage/pom.xml
@@ -24,14 +24,10 @@
     <dependencies>
         <dependency>
             <groupId>org.lfenergy.compas</groupId>
-            <artifactId>sct-data</artifactId>
+            <artifactId>sct-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.lfenergy.compas</groupId>
-            <artifactId>sct-service</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
     </dependencies>
     <build>
         <plugins>
