Issue : Create a new SCD file with header
Signed-off-by: Mohamed Sylla <mohamed.sylla@rte-france.com>

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,25 @@
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.20</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.7.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.7.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.lfenergy.compas.core</groupId>
@@ -40,6 +59,7 @@
     <modules>
         <module>sct-commons</module>
         <module>sct-coverage</module>
+        <module>sct-data</module>
     </modules>
 
     <build>
