update SCL COM adapater by adding subnetwork creation and connectedAP wiring - implement SCT-DATA for PostgreSQL
Signed-off-by: Mohamed Sylla <mohamed.sylla@rte-france.com>

--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -16,6 +16,8 @@
     <groupId>org.lfenergy.compas</groupId>
     <artifactId>sct-commons</artifactId>
     <version>local-SNAPSHOT</version>
+    <name>SCT-COMMONS</name>
+
 
     <properties>
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
