--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <module>sct-commons</module>
         <module>sct-coverage</module>
         <module>sct-data</module>
+        <module>sct-data-pg</module>
     </modules>
 
     <build>
