--- a/sct-coverage/pom.xml
+++ b/sct-coverage/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>sct-data</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.lfenergy.compas</groupId>
+            <artifactId>sct-data-pg</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
     <build>
