--- a/sct-coverage/pom.xml
+++ b/sct-coverage/pom.xml
@@ -37,7 +37,11 @@
             <artifactId>sct-data-pg</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.lfenergy.compas</groupId>
+            <artifactId>sct-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
