--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,13 @@
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
                 <version>5.7.2</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.7.2</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.lfenergy.compas.core</groupId>
