--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2020 Alliander N.V.
+# SPDX-FileCopyrightText: 2022 RTE FRANCE
 #
 # SPDX-License-Identifier: Apache-2.0
 
