[#57] : replace tests by ParametrerizedTest , update pom and remove unused import
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/sct-app/pom.xml
+++ b/sct-app/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>sct-data</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.lfenergy.compas</groupId>
+            <artifactId>sct-commons</artifactId>
+            <type>commons-tests-jar</type>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
