[#65] : add app module for automation services part
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <module>sct-commons</module>
         <module>sct-coverage</module>
         <module>sct-data</module>
+        <module>sct-app</module>
     </modules>
 
     <build>
