[#65] : generated xsd, copy resources from commons to app
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/sct-app/pom.xml
+++ b/sct-app/pom.xml
@@ -34,13 +34,13 @@
             <artifactId>sct-data</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.lfenergy.compas</groupId>
             <artifactId>sct-commons</artifactId>
-            <type>commons-tests-jar</type>
+            <type>test-jar</type>
             <version>${project.version}</version>
             <scope>test</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -92,6 +92,32 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.lfenergy.compas.xsd</groupId>
+                                    <artifactId>compas-scl-xsd</artifactId>
+                                    <version>0.0.4</version>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
