[#65] : sonar test coverage issue correction
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/sct-coverage/pom.xml
+++ b/sct-coverage/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>sct-data</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.lfenergy.compas</groupId>
+            <artifactId>sct-app</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
