--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -132,13 +132,17 @@
                         <goals>
                             <goal>unpack</goal>
                         </goals>
-
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.lfenergy.compas.xsd</groupId>
                                     <artifactId>compas-scl-xsd</artifactId>
                                     <version>0.0.4</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lfenergy.compas.core</groupId>
+                                    <artifactId>scl-extension</artifactId>
+                                    <version>0.8.0</version>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.build.directory}</outputDirectory>
