[#66] : delete commented code and update pom.xml
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/sct-commons/pom.xml
+++ b/sct-commons/pom.xml
@@ -139,6 +139,7 @@
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
+                            <includes>**/SCL2007B4/*.xsd, **/SCL_CoMPAS.xsd</includes>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.lfenergy.compas.xsd</groupId>
