--- a/sct-app/pom.xml
+++ b/sct-app/pom.xml
@@ -107,11 +107,17 @@
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
+                            <includes>**/SCL2007B4/*.xsd, **/SCL_CoMPAS.xsd</includes>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.lfenergy.compas.xsd</groupId>
                                     <artifactId>compas-scl-xsd</artifactId>
                                     <version>0.0.4</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.lfenergy.compas.core</groupId>
+                                    <artifactId>scl-extension</artifactId>
+                                    <version>0.8.0</version>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.build.directory}</outputDirectory>
