--- a/.github/workflows/automate_javadoc.yml
+++ b/.github/workflows/automate_javadoc.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2022 RTE FRANCE
+#
+# SPDX-License-Identifier: Apache-2.0
 name: Continuous Deployment - JavaDocs
 
 on:
@@ -16,7 +19,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
-          # ref: develop
+          ref: feat/117_Documentation_SCD_Generation_Process
 
       - name: Create custom Maven Settings.xml
         uses: whelk-io/maven-settings-xml-action@v20
@@ -40,8 +43,8 @@ jobs:
       - name: Prepare Pull Request branch
         run: |
           mvn -s custom_maven_settings.xml clean javadoc:aggregate -P javadoc
-          mkdir docs/javadoc
-          cp -Rf target/site/apidocs/* docs/javadoc/
+          mkdir -p docs/javadoc
+          yes | cp -Rf target/site/apidocs/* docs/javadoc/
           git add docs/ && git commit -m "updated Java docs repository" 
           git checkout -b feat/javadoc-pull-request
 
